Fix visibility of input text on dark mode

--- a/client/index.scss
+++ b/client/index.scss
@@ -29,6 +29,7 @@
 
 	input {
 		background: #111;
+		color: #fff;
 		border-color: #999;
 		border-style: solid;
 	}
